<resources>
    <string name="app_name">"Ichor"</string>

    <!-- Ichor Screen -->
    <string name="app_permission_was_denied">"You previously denied the app permission to access the heart rate sensor.\nThis can be changed in your watch settings."</string>
    <string name="ichor_sample_speed_prefix">"Sampling Speed:\u0020"</string>
    <string name="ichor_permission_button">"Permission request button."</string>
    <string name="ichor_delete_all_button">"Delete All Button"</string>
    <string name="ichor_delete_all_final">"Delete all your heartbeats? This cannot be undone."</string>
    <string name="ichor_delete_all_confirm">"Button for confirming delete all."</string>
    <string name="ichor_delete_all_reject">"Button for rejecting delete all."</string>
    <string name="ichor_sampling_speed_change">"Sampling Speed Change Button"</string>
    <string name="ichor_change_sampling_speed_question">"Change sampling speed?"</string>
    <string name="ichor_slow_sampling_row_tag">"Slow sampling with affirmation"</string>
    <string name="ichor_slow_sampling_speed">"Button for slow sampling speed."</string>
    <string name="ichor_default_sampling_row_tag">"Default sampling with affirmation"</string>
    <string name="ichor_default_sampling_speed">"Button for default medium sampling speed."</string>
    <string name="ichor_fast_sampling_row_tag">"Fast sampling with affirmation"</string>
    <string name="ichor_fast_sampling_speed">"Button for fast sampling speed."</string>
    <string name="ichor_about_button">"About Button"</string>
    <string name="ichor_delete_single_confirm">"Confirm deletion of single heartrate."</string>
    <string name="ichor_delete_single_reject">"Reject deletion of single heartrate."</string>
    <string name="ichor_bpm">"bpm"</string>
    <string name="ichor_delete_record_part_1">"Delete your heartbeat record of\u0020"</string>
    <string name="ichor_delete_record_part_2">"\u0020bpm dated\u0020"</string>
    <string name="ichor_main_heartbeat_icon">"Main heartbeat icon for app."</string>
    <string name="ichor_delete_heartbeat_icon">"Delete heartbeat icon for app."</string>
    <string name="ichor_change_sampling_speed_icon">"Change heartbeat sampling speed."</string>
    <string name="ichor_affirmation_icon">"Affirmation icon."</string>
    <string name="ichor_availability_prefix">"Availability:\u0020"</string>
    <string name="ichor_bpm_suffix">"\u0020bpm"</string>

    <!-- About Screen -->
    <string name="about_ichor">"About Ichor"</string>
    <string name="about_description">"Welcome to Ichor, where you can log your heartbeat with your watch!\n\nYou can view your current heart rate, record your heart rate into a local database to be stored on your watch using various sampling speeds,and view your heart rate history.\n\nYou can also delete your heart rate history if you so choose!"</string>
    <string name="about_starting_up">"Starting Up"</string>
    <string name="about_permissions">"You will need to provide the app with your permission to take your heart rate, so click the button with the associated icon to the left and grant the app permissions. If you initially refuse this permission, you will need to go into the watch settings to change the it."</string>
    <string name="about_about">"You can get to the \"About Ichor\" screen by clicking the button with this icon… but you already knew that, didn't you?"</string>
    <string name="about_what_you_can_see">"What You Can See"</string>
    <string name="about_bpm">"You can view your current heart rate on the main screen of the app, it will say, for example \"80 bpm\", which means 80 beats per minute."</string>
    <string name="about_availability">"The availability of heart rate data will be displayed, which should ideally be \"Available\" after initially being \"Acquiring\"; it will otherwise be \"Unknown\""</string>
    <string name="about_sampling_speed_display">"Your sampling speed dictates how often your current heart rate is added to the heart rate history. It can be \"Slow\", \"Default\", or \"Fast\". More about this is detailed below in the section on changing sampling speed."</string>
    <string name="about_bpm_subtitle">"BPM"</string>
    <string name="about_availability_subtitle">"Availability"</string>
    <string name="about_sampling_speed_subtitle">"Sampling Speed"</string>
    <string name="about_history_subtitle">"Heart Rate History"</string>
    <string name="about_history">"Your heart rate history will be displayed at the bottom of the main screen. It shows a list of all recorded heart rates, with their respective heart rate and time of recording. These can be swiped to the edge of the screen if you wish to delete them; more on this below."</string>
    <string name="about_what_you_can_do">"What You Can Do"</string>
    <string name="about_sampling_speed">"You can change the sampling rate by clicking the button associated with this icon. It will bring up a selection of sampling speed options for you to choose from, with a check mark next to your current option."</string>
    <string name="about_slow_sampling">"Slow: This will sample slowly, and have a delay before initially sampling."</string>
    <string name="about_default_sampling">"Default: This will sample at a moderate pace, and will initiate sampling immediately."</string>
    <string name="about_fast_sampling">"Fast: This will sample often, and will initiate sampling immediately."</string>
    <string name="about_delete_all">"You can delete all records by clicking this button and confirming you wish to do so with the prompt. Note that this is a nuclear option, and cannot be undone!"</string>
    <string name="about_delete_one_subtitle">"Delete a Single Record"</string>
    <string name="about_delete_one">"You can delete a single record by swiping the record all the way left or right and confirming with the prompt. Note that this cannot be undone!"</string>
    <string name="about_further_information">"Further Information"</string>
    <string name="about_further_information_details">"Please check out https://github.com/Carkzis/ for more information on any planned updates on the app, or any other apps currently under development!"</string>
    <string name="about_sampling_speeds_row_tag">"About sampling speeds row."</string>
    <string name="about_slow_sampling_row_tag">"About slow sampling speed row."</string>
    <string name="about_default_sampling_row_tag">"About default sampling speed row."</string>
    <string name="about_fast_sampling_row_tag">"About fast sampling speed row."</string>
    <string name="about_delete_all_row_tag">"About delete all row."</string>
    <string name="about_permissions_row_tag">"About permissions row."</string>
    <string name="about_about_row_tag">"About about row."</string>
    <string name="about_ichor_icon">"Learn more about Ichor."</string>
    <string name="about_permissions_icon">"Learn about the health services permission request."</string>
    <string name="about_about_icon">"About about Ichor."</string>
    <string name="about_sampling_speed_icon">"Learn about the sampling speed."</string>
    <string name="about_slow_sampling_icon">"Learn about the slow sampling speed."</string>
    <string name="about_default_sampling_icon">"Learn about the default sampling speed."</string>
    <string name="about_fast_sampling_icon">"Learn about the fast sampling speed."</string>
    <string name="about_delete_all_icon">"Learn about the deleting all records."</string>

    <!-- Reusables -->
    <string name="card_heart_rate_item">"Heart Rate Item Card"</string>
    <string name="no_content_description_available">"No content description available."</string>

</resources>